# csrc-scraper

./: pyproject.toml
csrc_scraper/: cavp_certificate_scraper.py  cmvp.py  cmvp_certificate_scraper.py  helpers.py  scraper.py  urls.py
tests/: case_loader.py  test_cavp_certificate_scraper.py  test_cmvp_certificate_scraper.py
tests/cmvp/: case_loader.py  test_scraper.py
tests/cmvp/html/: 1186.html  1479.html  1480.html  160.html  1708.html  2271.html  2486.html  2543.html  2921.html  3094.html  3187.html  3189.html  3835.html  4065.html  4351.html  4511.html  4846.html  sample_certs.txt
tests/cmvp/json/: 1186.json  1479.json  1480.json  160.json  1708.json  2038.json  2271.json  2394.json  2486.json  2543.json  2921.json  3094.json  3117.json  3187.json  3189.json  3835.json  3843.json  3980.json  4065.json  4123.json  4339.json  4351.json  4456.json  4511.json  4846.json  4898.json  548.json  736.json  877.json
tests/examples/cavp/certificates/html/: A4873.html
tests/examples/cavp/certificates/json/: A4873.json
tests/examples/cmvp/certificates/html/: 2038.html  2394.html  3117.html  3843.html  3980.html  4123.html  4339.html  4456.html  4898.html  548.html  736.html  877.html
tests/examples/cmvp/certificates/json/: 1186.json  1479.json  1708.json  2394.json  2486.json  3094.json  3187.json  3189.json  3980.json  4065.json  4339.json  4351.json  4511.json  4846.json  877.json  cmvp-certificate.schema.json
